fixed contact page line spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body {
     background-image: url(../images/blue-snow.png);
     color: #777777;
     font-family: Arial, 'Helvetica neue', helvetica, sans-serif;
+    line-height: 1.5;
 }
 
 
